refactor(UI): add structure for node config improved readability and maintainability
